--- a/index.pug
+++ b/index.pug
@@ -9,3 +9,4 @@ html(lang="en")
     include loyeers/header.pug
     hr.header__hr
     include loyeers/main.pug
+    include loyeers/job-openings.pug
