--- a/style/style.css
+++ b/style/style.css
@@ -256,4 +256,78 @@ body, html {
   justify-content: space-between;
   margin-top: 34px;
   padding: 16px 28px;
+}
+
+.jo {
+  background-color: #f8f8fa;
+}
+.jo__cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 32px;
+  margin-top: 58px;
+}
+.jo__card {
+  display: flex;
+  flex-direction: column;
+  gap: 23px;
+  border: 1px solid #f8f8fa;
+  background-color: #fff;
+}
+.jo__card_info {
+  display: flex;
+  gap: 14px;
+  align-items: center;
+}
+.jo__card_logo {
+  padding: 12px;
+  border: 1px solid #f8f8fa;
+}
+.jo__card_name p {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 180%;
+  color: #030407;
+  letter-spacing: -0.02em;
+}
+.jo__card_name span {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 160%;
+  color: #606476;
+  letter-spacing: -0.02em;
+}
+.jo__card_spec {
+  font-family: "Archivo", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 130%;
+  color: #030407;
+  letter-spacing: 0;
+}
+.jo__card_tags {
+  display: flex;
+  gap: 8px;
+}
+.jo__card_tags p {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 120%;
+  color: #443fde;
+  letter-spacing: 0;
+  padding: 6px 12px;
+  background-color: #f3f3fc;
+}
+.jo__card_tags span {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 120%;
+  color: #c98b40;
+  letter-spacing: 0;
+  padding: 6px 12px;
+  background-color: #fef7f1;
 }/*# sourceMappingURL=style.css.map */
