--- a/index.pug
+++ b/index.pug
@@ -10,4 +10,5 @@ html(lang="en")
     hr.header__hr
     include loyeers/main.pug
     include loyeers/job-openings.pug
+    include loyeers/work.pug
 
