--- a/style/style.css
+++ b/style/style.css
@@ -183,15 +183,17 @@ body, html {
   align-items: center;
   justify-content: space-between;
   background-color: #fff;
-  border: 1px solid #f8f8fa;
+  outline: 1px solid #f8f8fa;
+  transition: 0.3s;
   max-width: 720px;
   padding: 13px;
 }
 .main__search_icon:hover, .main__search_icon:focus-within {
-  border: 1px solid #443fde;
+  outline: 1px solid #443fde;
   fill: #443fde;
 }
 .main__search_icon:hover svg, .main__search_icon:focus-within svg {
+  transition: 0.3s;
   fill: #443fde;
 }
 .main__search_svg {
@@ -257,9 +259,55 @@ body, html {
   margin-top: 34px;
   padding: 16px 28px;
 }
+.main__company-list svg:hover path {
+  transition: 0.3s;
+  fill: #443fde;
+}
 
 .jo {
   background-color: #f8f8fa;
+  padding: 64px 0;
+}
+.jo__title {
+  display: flex;
+  flex-direction: column;
+  gap: 16.5px;
+}
+.jo__title h3 {
+  font-family: "Archivo", sans-serif;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 120%;
+  color: #030407;
+  letter-spacing: -0.02em;
+}
+.jo__title_info {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+.jo__title_info p {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 180%;
+  color: #3e404c;
+  letter-spacing: -0.02em;
+}
+.jo__title_info button {
+  text-align: center;
+  background-color: #443fde;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  padding: 10px 20px;
+  letter-spacing: -0.02em;
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 171%;
+  color: #fff;
+  letter-spacing: -0.02em;
 }
 .jo__cards {
   display: grid;
@@ -271,8 +319,14 @@ body, html {
   display: flex;
   flex-direction: column;
   gap: 23px;
-  border: 1px solid #f8f8fa;
   background-color: #fff;
+  cursor: pointer;
+  padding: 29px;
+  outline: 1px solid #f8f8fa;
+  transition: outline-color 0.3s;
+}
+.jo__card:hover {
+  outline: 4px solid #443fde;
 }
 .jo__card_info {
   display: flex;
@@ -330,4 +384,109 @@ body, html {
   letter-spacing: 0;
   padding: 6px 12px;
   background-color: #fef7f1;
+}
+.jo__card_footer {
+  display: flex;
+  gap: 24px;
+}
+.jo__card_location, .jo__card_money {
+  display: flex;
+  gap: 9px;
+  align-items: center;
+}
+
+.work {
+  padding: 64px 0;
+}
+.work__title {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+.work__title_info {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.work__title_info h3 {
+  font-family: "Archivo", sans-serif;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 120%;
+  color: #030407;
+  letter-spacing: -0.02em;
+}
+.work__title_info p {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 160%;
+  color: #606476;
+  letter-spacing: -0.02em;
+}
+.work__title_slide-btn {
+  display: flex;
+  gap: 22px;
+}
+.work__title_slide-btn button {
+  cursor: pointer;
+  text-align: center;
+  width: 48px;
+  height: 48px;
+  border: 1px solid #f8f8fa;
+  background-color: #fff;
+}
+.work__slider {
+  margin-top: 58px;
+  display: flex;
+  gap: 24px;
+}
+.work__slider_img {
+  border: 1px solid #f8f8fa;
+  padding: 12px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 56px;
+  height: 56px;
+}
+.work__slider_card {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  border: 1px solid #f8f8fa;
+  padding: 41px;
+  max-width: 390px;
+  width: 100%;
+  cursor: pointer;
+}
+.work__slider_card-logo {
+  display: flex;
+  gap: 14px;
+  align-items: center;
+}
+.work__slider_card-logo h6 {
+  font-family: "Archivo", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 130%;
+  color: #030407;
+  letter-spacing: 0;
+}
+.work__slider_card-info {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 180%;
+  color: #3e404c;
+  letter-spacing: -0.02em;
+}
+.work__slider_card-emp {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 120%;
+  color: #246b49;
+  letter-spacing: 0;
+  padding: 10px 15px;
+  background-color: #f1f8f4;
 }/*# sourceMappingURL=style.css.map */
